Fix a layout issue with the actions menu on the navigation pane
The layout got messed up when the actions menu was opened for a
playlist which was not the active view, and then another playlist below
the one with open menu was hovered over. In this case, the open popup
menu got dimmed, and the hovered playlist item in the navigation pane
got drawn over the popup menu.

The issue fixed here is not directly related to the Internet radio
feature, but in addition to the playlists, it affects also the popup
menu of the Internet radio navigation item. Hence, it is easier to fix
it within the feature branch.

--- a/css/style-navigation.css
+++ b/css/style-navigation.css
@@ -38,7 +38,7 @@
 	cursor: pointer;
 }
 
-#app-navigation .music-navigation-item:not(:hover):not(.active) .music-navigation-item-content {
+#app-navigation .music-navigation-item:not(:hover):not(.active):not(.menu-open) .music-navigation-item-content {
 	opacity: 0.7;
 }
 
@@ -133,6 +133,7 @@
 }
 
 #app-navigation .item-with-actions.active .actions .icon-more,
+#app-navigation .item-with-actions.menu-open .actions .icon-more,
 #app-navigation .item-with-actions:hover .actions .icon-more {
 	display: inline-block;
 }
